Added DTOs to services and controllers