@@ -2,9 +2,9 @@ package com.example.inventorysystem.services.impl;
 
 import com.example.inventorysystem.models.Inventory;
 import com.example.inventorysystem.models.Lending;
+import com.example.inventorysystem.models.dto.InventoryDTO;
 import com.example.inventorysystem.repos.InventoryRepo;
 import com.example.inventorysystem.services.LendingService;
-import com.example.inventorysystem.services.impl.InventoryServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -30,121 +30,133 @@ class InventoryServiceImplTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.initMocks(this);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
     void testGetAll() {
-        List<Inventory> expectedInventories = new ArrayList<>();
-        expectedInventories.add(new Inventory("Laptop", "INV123", "Room1", "CabinetA"));
+        List<Inventory> inventories = List.of(
+                new Inventory("Laptop", "INV123", "Room1", "CabinetA")
+        );
 
-        when(inventoryRepo.findAll()).thenReturn(expectedInventories);
+        when(inventoryRepo.findAll()).thenReturn(inventories);
 
-        List<Inventory> actualInventories = inventoryService.getAll();
+        List<InventoryDTO> result = inventoryService.getAll();
 
-        assertEquals(expectedInventories, actualInventories);
+        assertEquals(1, result.size());
+        assertEquals("Laptop", result.get(0).getDevice());
     }
 
     @Test
-    void testGetInventoryById_ExistingId() {
-        int existingId = 1;
-        Inventory expectedInventory = new Inventory("Laptop", "INV123", "Room1", "CabinetA");
-        expectedInventory.setInventoryId(existingId);
+    void testGetInventoryById_Existing() {
+        Inventory inventory = new Inventory("Monitor", "INV001", "RoomX", "CabinetY");
+        inventory.setInventoryId(1);
+        when(inventoryRepo.findById(1)).thenReturn(Optional.of(inventory));
 
-        when(inventoryRepo.findById(existingId)).thenReturn(Optional.of(expectedInventory));
+        Optional<InventoryDTO> result = inventoryService.getInventoryById(1);
 
-        Optional<Inventory> actualInventoryOptional = inventoryService.getInventoryById(existingId);
-        assertTrue(actualInventoryOptional.isPresent());
-        assertEquals(expectedInventory, actualInventoryOptional.get());
+        assertTrue(result.isPresent());
+        assertEquals("Monitor", result.get().getDevice());
     }
 
     @Test
-    void testGetInventoryById_NonExistingId() {
-        int nonExistingId = 999;
+    void testGetInventoryById_NonExisting() {
+        when(inventoryRepo.findById(999)).thenReturn(Optional.empty());
 
-        when(inventoryRepo.findById(nonExistingId)).thenReturn(Optional.empty());
+        Optional<InventoryDTO> result = inventoryService.getInventoryById(999);
 
-        Optional<Inventory> actualInventoryOptional = inventoryService.getInventoryById(nonExistingId);
-        assertTrue(actualInventoryOptional.isEmpty());
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    void testCreateInventory() {
-        Inventory inventoryToCreate = new Inventory("Laptop", "INV123", "Room1", "CabinetA");
+    void testCreateInventory_Valid() {
+        InventoryDTO dto = new InventoryDTO();
+        dto.setDevice("Printer");
+        dto.setInventoryNumber("INV789");
+        dto.setRoom("Room5");
+        dto.setCabinet("CabinetZ");
 
-        inventoryService.createInventory(inventoryToCreate);
+        inventoryService.createInventory(dto);
 
-        verify(inventoryRepo).save(inventoryToCreate);
+        verify(inventoryRepo, times(1)).save(any(Inventory.class));
     }
 
     @Test
-    void testUpdateInventoryById_ExistingId() {
-        int existingId = 1;
-        Inventory existingInventory = new Inventory("Laptop", "INV123", "Room1", "CabinetA");
-        existingInventory.setInventoryId(existingId);
+    void testCreateInventory_InvalidId() {
+        InventoryDTO dto = new InventoryDTO();
+        dto.setDevice("Phone");
+        dto.setInventoryNumber("INV333");
+        dto.setRoom("Room8");
+        dto.setCabinet("CabinetX");
+        dto.setInventoryId(99); // Should not be set during creation
 
-        List<Lending> lendings = new ArrayList<>();
-        Lending lending = new Lending();
-        lendings.add(lending);
-        existingInventory.setLending(lendings);
+        inventoryService.createInventory(dto);
 
-        Inventory updatedInventoryData = new Inventory("Desktop", "INV456", "Room2", "CabinetB");
-
-        when(inventoryRepo.findById(existingId)).thenReturn(Optional.of(existingInventory));
-        when(inventoryRepo.save(any(Inventory.class))).thenReturn(existingInventory);
-
-        inventoryService.updateInventoryById(existingId, updatedInventoryData);
-
-        verify(inventoryRepo, times(1)).save(existingInventory);
-        assertEquals("Desktop", existingInventory.getDevice());
-        assertEquals("INV456", existingInventory.getInventoryNumber());
-        assertEquals("Room2", existingInventory.getRoom());
-        assertEquals("CabinetB", existingInventory.getCabinet());
-        verify(lendingService, times(lendings.size())).updateLending(anyInt(), any(Lending.class));
-    }
-
-
-    @Test
-    void testUpdateInventoryById_NonExistingId() {
-        int nonExistingId = 99;
-        Inventory updatedInventoryData = new Inventory("Desktop", "INV456", "Room2", "CabinetB");
-
-        when(inventoryRepo.findById(nonExistingId)).thenReturn(Optional.empty());
-
-        assertThrows(NoSuchElementException.class, () ->
-                inventoryService.updateInventoryById(nonExistingId, updatedInventoryData));
+        verify(inventoryRepo, never()).save(any());
     }
 
     @Test
-    void testDeleteInventoryById_ExistingInventory_Success() {
+    void testUpdateInventoryById_Existing() {
         int inventoryId = 1;
-        Inventory inventory = new Inventory();
-        inventory.setLending(Collections.emptyList());  // Ensuring lending list is not null but empty
+        Inventory inventory = new Inventory("OldDevice", "INV000", "OldRoom", "OldCabinet");
+        inventory.setInventoryId(inventoryId);
+
+        Lending lending = new Lending();
+        lending.setLendingId(10);
+        inventory.setLending(List.of(lending));
 
         when(inventoryRepo.findById(inventoryId)).thenReturn(Optional.of(inventory));
+        when(inventoryRepo.save(any())).thenReturn(inventory);
 
-        inventoryService.deleteInventoryById(inventoryId);
+        InventoryDTO dto = new InventoryDTO();
+        dto.setDevice("UpdatedDevice");
+        dto.setInventoryNumber("INV999");
+        dto.setRoom("NewRoom");
+        dto.setCabinet("NewCabinet");
 
-        verify(inventoryRepo).deleteById(inventoryId);
+        inventoryService.updateInventoryById(inventoryId, dto);
+
+        assertEquals("UpdatedDevice", inventory.getDevice());
+        assertEquals("INV999", inventory.getInventoryNumber());
+        assertEquals("NewRoom", inventory.getRoom());
+        assertEquals("NewCabinet", inventory.getCabinet());
+        verify(lendingService).updateLending(10, lending);
     }
 
-
     @Test
-    void testDeleteInventoryById_NonExistingId() {
-        int nonExistingId = 999;
+    void testUpdateInventoryById_NonExisting() {
+        when(inventoryRepo.findById(999)).thenReturn(Optional.empty());
 
-        when(inventoryRepo.findById(nonExistingId)).thenReturn(Optional.empty());
+        InventoryDTO dto = new InventoryDTO();
+        dto.setDevice("NoUpdate");
 
-        assertThrows(NoSuchElementException.class, () -> inventoryService.deleteInventoryById(nonExistingId));
+        inventoryService.updateInventoryById(999, dto);
 
-        verify(inventoryRepo, never()).deleteById(nonExistingId);
-
+        verify(inventoryRepo, never()).save(any());
         verifyNoInteractions(lendingService);
     }
 
     @Test
-    void testCreateInventory_NullInput_ThrowsException() {
-        assertThrows(IllegalArgumentException.class, () -> inventoryService.createInventory(null));
-        verify(inventoryRepo, never()).save(any());
+    void testDeleteInventoryById_Existing() {
+        int id = 1;
+        Inventory inventory = new Inventory();
+        Lending lending = new Lending();
+        inventory.setLending(List.of(lending));
+
+        when(inventoryRepo.findById(id)).thenReturn(Optional.of(inventory));
+
+        inventoryService.deleteInventoryById(id);
+
+        verify(inventoryRepo).deleteById(id);
+    }
+
+    @Test
+    void testDeleteInventoryById_NonExisting() {
+        when(inventoryRepo.findById(123)).thenReturn(Optional.empty());
+
+        inventoryService.deleteInventoryById(123);
+
+        verify(inventoryRepo, never()).deleteById(123);
+        verifyNoInteractions(lendingService);
     }
 }
